--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,6 +1,8 @@
 main {
   width: 80%;
   margin: auto;
+  height: 100%;
+  min-height: calc(100vh - 244px);
 }
 
 .cards h2 {
@@ -38,4 +40,32 @@ main {
 
 .card img {
   height: 200px;
+}
+
+.container-main-home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.contatti-ctr {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 244px);
+  .indirizzo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid black;
+  }
+  .telefono {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+  }
 }
